Fix project alignment
Slightly tweak project summary page alignment and
font size.

--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -104,7 +104,7 @@ a, a:hover {
 }
 
 .entry-content figcaption, .caption {
-    font-size: small;
+    font-size: 12pt;
     margin-bottom: 2px;
 }
 
